# lbmg-util

./: .gitignore  pyproject.toml  pyproject.toml-old  setup.py
archive/fs/: x_get_next_dir_path.py  x_get_previous_filename.py
src/namespace/util/: __init__.py
src/namespace/util/all/: check_duplicate_rows.py  compare_dataframes_row_by_row.py  compare_table_to_csv.py  convert_row_list_into_their_types.py  copy_csv_data_to_table.py  determine_data_type.py  does_data_match_schema.py  fetch_df_from_table.py  get_unique_ids.py  print_color.py  print_filenames.py  sum_values.py
src/namespace/util/cross_pipelines/: compare_dfs_row_by_row.py
src/namespace/util/df/: rename_cols.py
src/namespace/util/files/: format_filepath_to_csv_filename.py
src/namespace/util/fs/: findFilesMatchingPattern.py  getAbsPath.py  getLastFileOrFolderInDir.py  getPackageRootPath.py  getParentDirPath.py  getPathTail.py  getPathType.py  getPrevDirPath.py  getPrevFileInParentDir.py  getPrevFilePath.py  getProjectRootDir.py  getPyprojectRootDir.py  getSrcDir.py  getTestDir.py
src/namespace/util/gCloud/: check_service_account_key.py  create_bigQuery_table.py  create_dataset.py  download_blob.py  extract_table.py  fetch_data.py  load_client.py  setup_dataset.py  setup_table.py  upload_data_to_bigQuery.py
src/namespace/util/googleAds/: __init__.py  add_hash_col.py  csv_to_postgres.py  (+9 more)
tests/test_util/: test_is_pandas_or_polars.py  test_to_pandas_df.py  test_to_polars_df.py
tests/test_util/fs/: test_getAbsPath.py  test_getPathType.py  test_getProjectRootDir.py  test_getPyprojectRootDir.py
(+8 files in other folders)
