[tool.poetry]
name = "namespace-util"
version = "0.0.0"
description = ""
authors = ["luketych <mrlanderson69@gmail.com>"]
packages = [{include = "namespace", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11.4"
setuptools = "^69.0.0"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.12.0"


[build-system]
requires = [ "poetry-core", "setuptools" ]
build-backend = "poetry.core.masonry.api"